--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "description": "Generates a directory structure based on a `tree` output",
   "main": "index.js",
+  "repository": "remy/eert",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
